--- a/KafkaDemo.ipynb
+++ b/KafkaDemo.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "560fd2bb",
    "metadata": {},
    "outputs": [],
@@ -56,21 +56,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "aa4679a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing to Kafka Broker\n",
+      "Writing: 2024-01-24 19:49:17,Los Angeles,27ºC\n",
+      "Writing: 2024-01-24 19:49:18,Los Angeles,29ºC\n",
+      "Writing: 2024-01-24 19:49:19,Los Angeles,23ºC\n",
+      "Writing: 2024-01-24 19:49:20,Los Angeles,32ºC\n",
+      "Writing: 2024-01-24 19:49:21,New York,24ºC\n",
+      "Writing: 2024-01-24 19:49:22,New York,22ºC\n",
+      "Writing: 2024-01-24 19:49:23,Mumbai,18ºC\n",
+      "Writing: 2024-01-24 19:49:24,New York,19ºC\n",
+      "Writing: 2024-01-24 19:49:25,New York,20ºC\n",
+      "Writing: 2024-01-24 19:49:26,Los Angeles,30ºC\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a producer to write data to kafka\n",
     "# Ref: https://kafka-python.readthedocs.io/en/master/apidoc/KafkaProducer.html\n",
     "\n",
     "# [TODO]: Replace '...' with the address of your Kafka bootstrap server\n",
-    "producer = KafkaProducer(bootstrap_servers=[...],\n",
+    "producer = KafkaProducer(bootstrap_servers=['localhost:9092'],\n",
     "                        value_serializer=lambda x: dumps(x).encode('utf-8'),\n",
     "                        )\n",
     "\n",
     "# [TODO]: Add cities of your choice\n",
-    "# cities = []\n",
+    "cities = ['New York', 'Mumbai', 'Los Angeles']\n",
     "\n",
     "# Write data via the producer\n",
     "print(\"Writing to Kafka Broker\")\n",
